Fix: .form-group align-items center, margin 0, padding 8px 0

--- a/skins/editorial/styles/_styles.less
+++ b/skins/editorial/styles/_styles.less
@@ -111,6 +111,9 @@ select.custom-select {
 
 .form-group {
     display: flex;
+    align-items: center;
+    margin: 0;
+    padding: 8px 0;
 }
 
 .form-group.row {
